public/assets/styles/work.css
.work-container {
  height: 100vh;
  z-index: 7;
}

.work-container .work-copy{
  max-width: 49ch;
  text-align: center;
  font-size: 1.4em;
}

.work-container .work-companies{
  margin-top: 25vh;
  margin-bottom: 10vh;

  display: flex;
  flex-direction: row;
  justify-content: space-around;
  max-width: 80%;
}

.work-companies img{
  padding: 30px;
  max-height: 50px;
  max-width: 150px;
  align-self: center;
}

@media (max-width: 710px){

  .work-container .work-companies{
    margin-top: 0;
    margin-bottom: 5vh;
    overflow: scroll;
    width: 100vw;
    justify-content: flex-start;
  }

  .work-container .work-copy{
    max-width: 60vw;
    font-size: 1em;
  }


  .work-companies img{
    padding: 30px;
    max-height: 20px;
  }
}

